# mayacsm

./: .env.example  .gitignore  .gitmodules  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ngrok_keepalive.py  pyproject.toml  requirements.txt  run.py  run_maya.sh  run_ngrok.py  server.py  start.sh  start_maya.sh  start_maya_live.sh
assets/voice_prompt/: maya_voice_prompt.pt  maya_voice_prompt_backup_long.pt  maya_voice_prompt_backup_phase2.pt  maya_voice_prompt_expresso.pt  maya_voice_prompt_human.pt  maya_voice_prompt_long.pt  maya_voice_prompt_tts_backup.pt
config/: default.yaml  production.yaml
deploy/: Dockerfile  docker-compose.yml
deploy/kubernetes/: configmap.yaml  deployment.yaml  ingress.yaml  namespace.yaml  service.yaml
docs/: ARCHITECTURE.md
fillers/: metadata.json
maya/: __init__.py  config.py
maya/conversation/: __init__.py  filler.py  manager.py  natural_fillers.py
maya/engine/: __init__.py  audio_enhancer.py  audio_exciter.py  audio_humanizer.py  audio_post_processor.py  audio_processor.py  llm.py  llm_fast.py  llm_llamacpp.py  llm_optimized.py  llm_streaming.py  llm_vllm.py  starter_cache.py  stt.py  stt.py.backup  stt_fast.py  stt_faster.py  stt_local.py  stt_streaming.py  stt_true_streaming.py  tts.py  tts_compiled.py  tts_official.py  tts_optimized.py  tts_orpheus.py  tts_streaming.py  tts_streaming_real.py  turn_detector.py  vad.py
maya/patches/: __init__.py
maya/pipeline/: __init__.py  fast_orchestrator.py  optimized_orchestrator.py  orchestrator.py  production_pipeline.py  seamless_orchestrator.py  sesame_orchestrator.py  smart_orchestrator.py  streaming_orchestrator.py
maya/server/: __init__.py  app.py
scripts/: analyze_audio_quality.py  analyze_clicks.py  analyze_severe_clicks.py  benchmark_codebooks.py  benchmark_final_latency.py  benchmark_latency.py  benchmark_orpheus_voices.py  benchmark_production_pipeline.py  benchmark_realtime.py  benchmark_streaming.py  benchmark_voices.py  benchmark_voices_quick.py  brutal_quality_test.py  brutal_sesame_test.py  brutal_stress_test.py  brutal_test.py  compare_base_vs_finetuned.py  compare_post_processing.py  compare_q4_q8_quality.py  compare_temperature.py  compare_voices_jess_tara.py  compare_voices_jess_zoe.py  create_expresso_voice_prompt.py  create_matched_voice_prompt.py  create_production_voice_prompt.py  create_short_voice_prompt.py  deep_audio_analysis.py  deep_latency_analysis.py  definitive_quality_test.py  diagnose_clicks.py  diagnose_clicks_simple.py  diagnose_crossfade.py  diagnose_llm.py  diagnose_tts_outliers.py  final_latency_test.py  final_quality_report.py  find_optimal_codebooks.py  finetune_csm_sesame.py  fix_cpu_overhead.py  generate_audio_samples.py  (+105 more)
tests/: __init__.py  conftest.py  final_validation.py  stress_test.py  test_components.py  test_moshi_engine.py  test_pipeline.py  test_response_router.py
tests/benchmarks/: __init__.py  latency_benchmark.py
tests/gpu/: __init__.py  test_full_pipeline.py
tests/integration/: __init__.py  test_pipeline_integration.py
tests/outputs/final_samples/: conversation.txt
training/: RESUME_TRAINING.md  RESUME_TRAINING.sh  START_TRAINING.sh  run_pipeline.sh
training/configs/: default.yaml
training/scripts/: 01_download_expresso.py  02_extract_single_speaker.py  03_preprocess_audio.py  03b_tokenize_audio.py  04_train_csm.py  04_train_csm_correct.py  04_train_csm_efficient.py  04_train_csm_fast.py  04_train_csm_full.py  04_train_csm_lora.py  04_train_csm_lora_v2.py  04_train_csm_production.py  04_train_csm_production_v2.py  04_train_csm_ultimate.py  05_evaluate_model.py  05_train_decoder_only.py  06_integrate_model.py  06_prepare_naturalness_data.py  07_train_combined_naturalness.py  08_evaluate_model_quality.py  09_score_utmos.py  10_test_postprocessing_utmos.py  11_eval_training_curve.py  12_generate_dpo_dataset.py  13_train_dpo.py  14_train_grpo.py  15_eval_grpo.py  16_post_grpo_evaluation.py  20_prepare_orpheus_data.py  21_train_orpheus_lora.py  22_merge_and_convert.py  23_ab_test_base_vs_finetuned.py  24_prepare_orpheus_data_v3.py  25_train_orpheus_lora_v3.py  26_fair_baseline_eval.py  27_prepare_grpo_prompts.py  28_train_orpheus_grpo.py  auto_monitor.py  monitor_training.py  post_training_pipeline.sh  (+2 more)
ui/: maya.html
